tests/negative/str_cat_type.rkl
(str-cat "a" 1 "b")
